# sgl

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Common.mk  Dockerfile  Makefile  Package.mk  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.gitlab/issue_templates/: Bug.md  Feature.md
cmake/: CMakeLists.txt  Toolchain-mingw32.cmake
cmake/lib/: CMakeLists.txt
cmake/lib/c/: CMakeLists.txt
cmake/lib/c/lua/: CMakeLists.txt
cmake/lib/cpp/: CMakeLists.txt
cmake/lib/cpp/fmt/: CMakeLists.txt
cmake/main/c/: CMakeLists.txt
cmake/main/c/bt/: CMakeLists.txt
cmake/main/c/bt/ddrio/: CMakeLists.txt
cmake/main/c/bt/iidxio/: CMakeLists.txt
cmake/main/c/bt/jbio/: CMakeLists.txt
cmake/main/cpp/: CMakeLists.txt
cmake/main/cpp/io/: CMakeLists.txt
cmake/main/cpp/io/ddrio/: CMakeLists.txt
cmake/main/cpp/io/iidxio/: CMakeLists.txt
cmake/main/cpp/io/jbio/: CMakeLists.txt
cmake/main/cpp/io/joystick/sdl2/: CMakeLists.txt
cmake/main/cpp/io/keyboard/sdl2/: CMakeLists.txt
cmake/main/cpp/io/null/: CMakeLists.txt
cmake/main/cpp/io/piubtn/: CMakeLists.txt
cmake/main/cpp/io/piulxio/: CMakeLists.txt
cmake/main/cpp/io/piumk6/: CMakeLists.txt
cmake/main/cpp/io/piumk6itg/: CMakeLists.txt
cmake/main/cpp/io/test/: CMakeLists.txt
cmake/main/cpp/ks/: CMakeLists.txt
cmake/main/cpp/sgl/: CMakeLists.txt
src/lib/cpp/backwards/: backward.hpp
src/lib/cpp/spdlog/: tweakme.h
src/main/c/bt/api/: ddrio.h  iidxio.h  jbio.h
src/main/c/bt/ddrio/: ddrio-stub.c
src/main/c/bt/iidxio/: iidxio-stub.c
src/main/c/bt/jbio/: jbio-stub.c
src/main/cpp/io/: IODevice.h  IODeviceException.h  IOException.h  IOManager.cpp  IOManager.h  IOManagerCtx.h  IOStateProcessorManager.cpp  IOStateProcessorManager.h  InputState.h  InputStateProcessor.h  LibIODevice.h  OutputState.h  OutputStateProcessor.h
src/main/cpp/io/bt/: BemanitoolsGlue.cpp  BemanitoolsGlue.h
src/main/cpp/io/ddrio/: DDRIO.cpp  DDRIO.h  DDRIODefs.h  DDRIOException.h  io-ddrio.cpp
src/main/cpp/io/iidxio/: IIDXIO.cpp  IIDXIO.h  IIDXIODefs.h  IIDXIOException.h  io-iidxio.cpp
src/main/cpp/io/jbio/: JBIO.cpp  JBIO.h  JBIODefs.h  JBIOException.h  io-jbio.cpp
src/main/cpp/io/joystick/: DigitalInputs.h
src/main/cpp/io/keyboard/: DigitalInputs.h
src/main/cpp/io/null/: Null.h  NullDefs.h  io-null.cpp
src/main/cpp/io/piubtn/: PiuBtn.cpp  PiuBtn.h  PiuBtnDefs.h  io-piubtn.cpp
src/main/cpp/io/piulxio/: PiuLxio.cpp  PiuLxio.h  PiulxioDefs.h  io-piulxio.cpp
src/main/cpp/io/piumk6/: PiuMk6.cpp  PiuMk6.h  Piumk6Defs.h  io-piumk6.cpp
src/main/cpp/io/piumk6itg/: PiuMk6Itg.cpp  PiuMk6Itg.h  Piumk6ItgDefs.h  io-piumk6itg.cpp
src/main/cpp/io/sdl2/: EventProxy.h  JoystickEventListener.h  KeyboardEventListener.h
src/main/cpp/io/test/: IOSPTestNull.cpp  IOSPTestNull.h  IOTest.cpp
src/main/cpp/io/util/: Usb.cpp  Usb.h
src/main/cpp/ks/: Defs.h  DynamicLibrary.cpp  DynamicLibrary.h  Exception.h  File.h  FileException.h  FileMemory.cpp  FileMemory.h  FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h  FileSystemException.h  KitchenSink.cpp  KitchenSink.h  Logger.cpp  Logger.h  Logger.hpp  Object.h  Process.cpp  Process_.h  Random.cpp  Random.h  Settings.cpp  Settings.h  SettingsCmdArgsLoader.cpp  SettingsCmdArgsLoader.h  SettingsException.h  SettingsLoader.h  SettingsSaver.h  StringUtils.cpp  StringUtils.h  System.cpp  System.h  SystemException.h  Thread.h  ThreadLoop.h  Time.h  Timer.h  Trace.cpp  (+1 more)
src/main/cpp/sgl/: DataManager.cpp  DataManager.h  EngineProxy.h  FontException.h  FontManager.cpp  FontManager.h  GameLauncher.cpp  GameLauncher.h  Games.cpp  Games.h  OutputAnimation.cpp  OutputAnimation.h  Renderer.cpp  Renderer.h  ResourceException.h  SFXManager.cpp  SFXManager.h  SGL.cpp  SGL.h  SGLSettings.cpp  SGLSettings.h  SaveState.cpp  SaveState.h  Screen.h  ShellScript.cpp  ShellScript.h  SoundException.h  SoundRenderer.cpp  SoundRenderer.h  SpriteException.h  SpriteRenderer.cpp  SpriteRenderer.h  TextOutputAnimation.cpp  TextOutputAnimation.h  TextureException.h  TextureManager.cpp  TextureManager.h  VideoDecoder.cpp  VideoDecoder.h  VideoDecoderException.h  (+6 more)
src/main/cpp/sgl/attract/: AttractLuaBindings.cpp  AttractLuaBindings.h  AttractScreen.cpp  AttractScreen.h  DefaultGameSelectorTimer.cpp  DefaultGameSelectorTimer.h
src/main/cpp/sgl/boot/: BootScreen.cpp  BootScreen.h
src/main/cpp/sgl/error/: ErrorCtx.h  ErrorScreen.cpp  ErrorScreen.h
src/main/cpp/sgl/lua/: LuaAsset.cpp  LuaAsset.h  LuaDebug.cpp  LuaDebug.h  LuaException.h  LuaFont.cpp  LuaFont.h  LuaHelper.cpp  LuaHelper.h  LuaIOPHelper.cpp  LuaIOPHelper.h  LuaISP.h  LuaISPBindings.cpp  LuaISPBindings.h  LuaNativeToLuaHelper.cpp  LuaNativeToLuaHelper.h  LuaOSP.h  LuaOSPBindings.cpp  LuaOSPBindings.h  LuaRenderer.cpp  LuaRenderer.h  LuaSettingsLoader.cpp  LuaSettingsLoader.h  LuaSound.cpp  LuaSound.h  LuaSprite.cpp  LuaSprite.h  LuaState.cpp  LuaState.h  LuaTexture.cpp  LuaTexture.h  LuaTime.cpp  LuaTime.h  LuaToNativeHelper.cpp  LuaToNativeHelper.h  LuaVideo.cpp  LuaVideo.h
src/main/cpp/sgl/operator/: Menu.cpp  Menu.h  MenuItem.h  MenuItemText.cpp  MenuItemText.h  MenuPage.h  MenuPageText.cpp  MenuPageText.h  OperatorScreen.cpp  OperatorScreen.h
src/main/lua/: sgl.lua
src/main/lua/io/ddrio/: defs.lua  isp-attract.lua  isp-operator.lua  osp-attract.lua
src/main/lua/io/iidxio/: defs.lua  isp-attract.lua  isp-operator.lua  osp-attract.lua
src/main/lua/io/jbio/: defs.lua  isp-attract.lua  isp-operator.lua  osp-attract.lua
src/main/lua/io/piubtn/: defs.lua  isp-attract.lua  isp-operator.lua  osp-attract.lua
src/main/lua/io/piulxio/: defs.lua  isp-attract.lua  isp-operator.lua  osp-attract.lua
src/main/lua/io/piumk6/: defs.lua  isp-attract.lua  isp-operator.lua  osp-attract.lua
src/main/lua/io/piumk6itg/: defs.lua  isp-attract.lua  isp-operator.lua  osp-attract.lua
src/main/lua/iop/: input-state.lua  isp.lua  osp.lua  output-anim.lua  text-output-anim.lua
src/main/lua/screen/attract/: defs.lua
(+24 files in other folders)
